--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+*{
+  margin:0;
+  padding:0;
+}
+
+header{
+  background-color:#00bfff;
+}
+
 .box{
   background-color:#000000;
   color:#ffffff;
