--- a/css/default.css
+++ b/css/default.css
@@ -5,6 +5,10 @@
   padding:0;
 }
 
+body{
+  background-color:#faf0e6;
+}
+
 header{
   background-color:#00bfff;
 }
@@ -15,4 +19,12 @@ header{
   width:240px;
   margin:5px;
   float:left;
+}
+
+aside{
+  background-color:#8b0000;
+}
+
+footer{
+  background-color:#808000;
 }
