--- a/css/default.css
+++ b/css/default.css
@@ -13,6 +13,13 @@ header{
   background-color:#00bfff;
 }
 
+#main{
+  background-color:#4b0082;
+  width:calc(100%-200px);
+  min-width:500px;
+  float:left;
+}
+
 .box{
   background-color:#000000;
   color:#ffffff;
