--- a/css/default.css
+++ b/css/default.css
@@ -7,10 +7,15 @@
 
 body{
   background-color:#faf0e6;
+  margin:48px 0 0 0;
 }
 
 header{
   background-color:#00bfff;
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
 }
 
 #main{
